<resources>
    <string name="app_name">tool-secret</string>
    <string name="secret_key">0123456789ABCDEF</string>
    <string name="search_text">please input search text</string>
    <string name="arrow_top">↑</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="arrow_left">←</string>
    <string name="sort_asc">Sort in ascending order</string>
    <string name="prev_page">previous page</string>
    <string name="sort_desc">Sort in descending order</string>
    <string name="next_page">next page</string>
</resources>
