<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"/>

    <LinearLayout
        android:id="@+id/controller_container_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <Button
            android:id="@+id/view_pager_prev"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/page_button"
            android:onClick="buttonClickListener"
            android:alpha="0.25"
            android:hint="@string/prev_page"
            android:text="@string/arrow_left" />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/view_pager_next"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/page_button"
            android:onClick="buttonClickListener"
            android:hint="@string/next_page"
            android:text="@string/arrow_right" />
    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp"><!-- fragment --></androidx.viewpager2.widget.ViewPager2>

    <LinearLayout
        android:id="@+id/controller_container_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="-75dp"
        android:layout_marginRight="50dp"
        android:gravity="bottom"
        tools:ignore="VisualLintBounds">

        <Button
            android:id="@+id/sort_asc"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/page_button"
            android:onClick="buttonClickListener"
            android:alpha="0.25"
            android:hint="@string/sort_asc"
            android:text="@string/arrow_down" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/sort_desc"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/page_button"
            android:onClick="buttonClickListener"
            android:alpha="0.25"
            android:hint="@string/sort_desc"
            android:text="@string/arrow_top" />
    </LinearLayout>
</FrameLayout>